[gd_scene load_steps=3 format=2]

[ext_resource path="res://src/scenes/editor/Popups/AboutPopupDialog.gd" type="Script" id=1]
[ext_resource path="res://src/utils/AnimatedPopupAnim/AnimatedPopupAnim.tscn" type="PackedScene" id=3]



[node name="AboutPopupDialog" type="PopupDialog"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -229.5
margin_top = -160.0
margin_right = 229.5
margin_bottom = 160.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 8.0
margin_right = -8.0
margin_bottom = -8.0
size_flags_horizontal = 0
size_flags_vertical = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ProjectTitleLabel" type="Label" parent="VBoxContainer"]
margin_right = 443.0
margin_bottom = 14.0
text = "MMLV Editor"
align = 1

[node name="ProjectDescLabel" type="Label" parent="VBoxContainer"]
modulate = Color( 1, 1, 1, 0.584314 )
margin_top = 18.0
margin_right = 443.0
margin_bottom = 32.0
text = "Mega Man Maker - level editor tool"
align = 1

[node name="ProjDetail" type="Label" parent="VBoxContainer"]
margin_top = 36.0
margin_right = 443.0
margin_bottom = 50.0
text = "MMLV Editor is a non-profit software tool made with Godot Engine"
autowrap = true

[node name="AuthorHSep" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 54.0
margin_right = 443.0
margin_bottom = 68.0

[node name="HSeparatorBegin" type="HSeparator" parent="VBoxContainer/AuthorHSep"]
margin_right = 8.0
margin_bottom = 14.0
rect_min_size = Vector2( 8, 0 )

[node name="Label" type="Label" parent="VBoxContainer/AuthorHSep"]
margin_left = 12.0
margin_right = 62.0
margin_bottom = 14.0
text = "Authors"

[node name="HSeparatorEnd" type="HSeparator" parent="VBoxContainer/AuthorHSep"]
margin_left = 66.0
margin_right = 443.0
margin_bottom = 14.0
size_flags_horizontal = 3

[node name="AuthorHBox" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 72.0
margin_right = 443.0
margin_bottom = 86.0

[node name="Author" type="Label" parent="VBoxContainer/AuthorHBox"]
margin_right = 215.0
margin_bottom = 14.0
size_flags_horizontal = 3
custom_colors/font_color = Color( 0, 0.439216, 1, 1 )
text = "name"

[node name="Hyphen" type="Label" parent="VBoxContainer/AuthorHBox"]
margin_left = 219.0
margin_right = 224.0
margin_bottom = 14.0
text = "-"

[node name="Role" type="Label" parent="VBoxContainer/AuthorHBox"]
margin_left = 228.0
margin_right = 443.0
margin_bottom = 14.0
size_flags_horizontal = 3
text = "Lead Developer & Maintainer"

[node name="ContributorHSep" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 90.0
margin_right = 443.0
margin_bottom = 104.0

[node name="HSeparatorBegin" type="HSeparator" parent="VBoxContainer/ContributorHSep"]
margin_right = 8.0
margin_bottom = 14.0
rect_min_size = Vector2( 8, 0 )

[node name="Label" type="Label" parent="VBoxContainer/ContributorHSep"]
margin_left = 12.0
margin_right = 91.0
margin_bottom = 14.0
text = "Contributors"

[node name="HSeparatorEnd" type="HSeparator" parent="VBoxContainer/ContributorHSep"]
margin_left = 95.0
margin_right = 443.0
margin_bottom = 14.0
size_flags_horizontal = 3

[node name="AuthorHBox2" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 108.0
margin_right = 443.0
margin_bottom = 122.0

[node name="Author" type="Label" parent="VBoxContainer/AuthorHBox2"]
margin_right = 215.0
margin_bottom = 14.0
size_flags_horizontal = 3
custom_colors/font_color = Color( 0, 0.439216, 1, 1 )
text = "Heart Code Games"

[node name="Hyphen" type="Label" parent="VBoxContainer/AuthorHBox2"]
margin_left = 219.0
margin_right = 224.0
margin_bottom = 14.0
text = "-"

[node name="Role" type="Label" parent="VBoxContainer/AuthorHBox2"]
margin_left = 228.0
margin_right = 443.0
margin_bottom = 14.0
size_flags_horizontal = 3
text = "Developer"

[node name="EmptyBox2" type="ReferenceRect" parent="VBoxContainer"]
margin_top = 126.0
margin_right = 443.0
margin_bottom = 232.0
rect_min_size = Vector2( 0, 16 )
size_flags_vertical = 3

[node name="SourceButton" type="LinkButton" parent="VBoxContainer"]
margin_left = 132.0
margin_top = 236.0
margin_right = 311.0
margin_bottom = 250.0
size_flags_horizontal = 4
custom_colors/font_color_hover = Color( 0.0823529, 0.635294, 1, 1 )
text = "View source code on Github"

[node name="RoadmapButton" type="LinkButton" parent="VBoxContainer"]
margin_left = 178.0
margin_top = 254.0
margin_right = 265.0
margin_bottom = 268.0
size_flags_horizontal = 4
custom_colors/font_color_hover = Color( 0.0823529, 0.635294, 1, 1 )
text = "Our Roadmap"

[node name="ContributeGuideButton" type="LinkButton" parent="VBoxContainer"]
visible = false
margin_left = 137.0
margin_top = 198.0
margin_right = 204.0
margin_bottom = 212.0
size_flags_horizontal = 4
custom_colors/font_color_hover = Color( 0.0823529, 0.635294, 1, 1 )
text = "Contribute"

[node name="EmptyFixBox" type="ReferenceRect" parent="VBoxContainer"]
margin_top = 272.0
margin_right = 443.0
margin_bottom = 280.0
rect_min_size = Vector2( 0, 8 )

[node name="OkButton" type="Button" parent="VBoxContainer"]
margin_left = 206.0
margin_top = 284.0
margin_right = 237.0
margin_bottom = 304.0
size_flags_horizontal = 4
text = "OK"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimatedPopupAnim" parent="." instance=ExtResource( 3 )]
[connection signal="pressed" from="VBoxContainer/SourceButton" to="." method="_on_SourceButton_pressed"]
[connection signal="pressed" from="VBoxContainer/RoadmapButton" to="." method="_on_RoadmapButton_pressed"]
[connection signal="pressed" from="VBoxContainer/OkButton" to="." method="_on_OkButton_pressed"]
